--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@ngxs/store": "^3.2.0",
     "core-js": "^2.5.4",
     "rxjs": "^6.2.1",
+    "uuid": "^3.3.2",
     "zone.js": "^0.8.26"
   },
   "devDependencies": {
