--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
     "core-js": "^2.5.4",
     "rxjs": "^6.2.1",
     "uuid": "^3.3.2",
-    "zone.js": "^0.8.26"
+    "zone.js": "^0.8.26",
+    "hoek": "^5.0.3"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.6.8",
