--- a/package.json
+++ b/package.json
@@ -29,10 +29,11 @@
     "@ngxs/store": "^3.2.0",
     "angular-autofocus-fix": "^0.1.0",
     "core-js": "^2.5.4",
+    "hoek": "^5.0.3",
+    "immer": "^1.5.0",
     "rxjs": "^6.2.1",
     "uuid": "^3.3.2",
-    "zone.js": "^0.8.26",
-    "hoek": "^5.0.3"
+    "zone.js": "^0.8.26"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.6.8",
